--- a/fontscale-table-classic.tex
+++ b/fontscale-table-classic.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{fontscale-table-classic.tex}[2025-02-13]
+\ProvidesFile{fontscale-table-classic.tex}[2025-03-02]
 
 \begin{table}
   \centering
@@ -19,7 +19,7 @@
           }
       , cell{1}{2-Z}={guard}
       , cell{2-Z}{1}={cmd=\cs}
-      , cell{1}{2-Z}={cmd=\Key}
+      , cell{1}{2-Z}={cmd=\key}
     }
     \toprule
       font size command & classic-10pt & classic-11pt & classic-12pt \\
