--- a/fontscale-table-musical.tex
+++ b/fontscale-table-musical.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{fontscale-table-musical.tex}[2025-02-13]
+\ProvidesFile{fontscale-table-musical.tex}[2025-03-02]
 
 \begin{table}
   \centering
@@ -20,7 +20,7 @@
       , cell{2-Z}{1}={cmd=\cs}
     }
     \toprule
-      font size command & \Key{musical} \\
+      font size command & \key{musical} \\
     \midrule
       tiny         & 5.74  \\
       scriptsize   & 6.60  \\
